[project]
name = "rply-stubs"
version = "0.1.0.0.7.8"
description = "A stubs library for RPLY"
readme = "README.md"
requires-python = ">=3.12"                                               # new Generics syntax used.
dependencies = ["rply==0.7.8"]
authors = [{ name = "ArachnidAbby" }, { name = "Summersweet-Software" }]

license = { text = "MIT-only" }
keywords = [
    "stubs",
    "typed",
    "typing",
    "rply",
    "lexer generator",
    "parser generator",
    "lexer",
    "parser",
    "mypy",
    "pyi",
    "stubs only",
]

classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # topic
    "Topic :: Software Development :: Libraries",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # Licensing
    "License :: OSI Approved :: MIT License",
    # OS
    "Operating System :: OS Independent",
    # other
    "Natural Language :: English",
    "Typing :: Stubs Only",
]

[project.urls]
Homepage = "https://summersweet.software"
Repository = "https://github.com/summersweet-software/rply-stubs"
Issues = "https://github.com/summersweet-software/rply-stubs/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
